# type-constrained-code-generation

./: .gitignore  README.md  incremental_tsc.py  package.json  pyproject.toml  setup_conda.sh  setup_env.sh
.github/workflows/: tests.yml
experiments/main/: .gitignore  analyze_avg_time.py  analyze_inf_res.py  analyze_many_temp.sh  analyze_multifun.py  analyze_outputs.py  analyze_pass_not_accepted.py  analyze_passatk.sh  analyze_resample.py  convert_files.py  count_syntax_errors.py  create_humaneval_repair_dataset.sh  create_mbpp_repair_dataset.sh  create_repair_dataset.py  download_models.py  figures.sh  filter_sensible_ts_outputs.py  fix_nc.py  inference_multiple.py  inference_multiple_repair.py  invalid_mbpp  kill_inf.sh  print_c.py  rerun_temp_inf.py  run_experiments.sh  run_experiments_repair.py  run_experiments_syn_tran.py  translate_canonical_humaneval.py  util.py
experiments/main/figures/: fig_compiler_perf_comparison.py  fig_compiler_perf_fc.py  fig_compiler_perf_repair.py  fig_compiler_perf_syn_tran.py  fig_compiler_time.py
experiments/main/figures_revision/: fig_compiler_perf_syn_tran_repair.py  (+2 more)
test/: test_parser_base.py  test_parser_ts.py  utils.py
test/data/: openai_openai_humaneval_ts_gpt-4o-2024-05-13.jsonl  openai_openai_humaneval_ts_gpt-4o-2024-05-13_filtered.jsonl  print_instance.py
ts_parser/: .gitignore  Cargo.toml  README.md  build.sh
ts_parser/src/: main.rs
typesafe_llm/: sampling.py  trie.py  util.py
typesafe_llm/parser/: parser_base.py  parser_shared.py  parser_ts.py  parser_ts_types.py  types_base.py  types_ts.py  util.py
(+164 files in other folders)
